# projectforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  forge  pyproject.toml
.github/workflows/: ci.yml  release-homebrew.yml
Formula/: projectforge.rb
conventions/global/: cross-recipe-python.md  frontend-brand.md  shared.md
docs/: README.md
docs/diagrams/: forge-execution-strategy.d2  forge-flow.md  forge-input-flow.d2  forge-input-flow.md  forge-product-map.d2  forge-product-overview.md  forge-project-lifecycle.d2  forge-project-lifecycle.md  forge-prompt-assembly.d2  forge-prompt-assembly.md  forge-routing-and-execution.md  forge-routing-logic.d2  forge-runtime-pipeline.d2  forge-runtime-pipeline.md  forge-trust-boundaries.d2  forge-trust-boundaries.md  forge-user-journey.d2  forge-user-journey.md  render.sh  styles.d2
docs/guides/: configuration.md  getting-started.md  migrating-from-0.4.1.md  security-privacy.md  stacks.md  troubleshooting.md
docs/maintainers/: adding-a-stack.md  admin-playbook.md  clean-user-testing.md  homebrew-new-user-setup-audit-2026-07.md  homebrew-release.md  product-audit-2026-07.md  production-readiness-evidence.md  production-readiness-plan.md  provider-compatibility.md  public-release-checklist.md  pypi-release.md  roadmap.md  skill-behavioral-evidence.md  user-visible-error-inventory.csv
docs/reference/: antigravity-cli.md
docs/showcase/: README.md  (+3 more)
docs/showcase/generated-project/: README.md  pyproject.toml
docs/showcase/generated-project/checks/: verify_greeting.py
docs/showcase/generated-project/src/hello_forge/: __init__.py  cli.py
scripts/: check_docs.py  clean_user_harness.py  generate_homebrew_formula.py  inspect_artifacts.py  scan_safety.py  validate_forge_skill.py
site/: docs.html  index.html
tests/: conftest.py  test_adapter_base.py  test_agent_quality.py  test_analytics.py  test_antigravity_adapter.py  test_card.py  test_checks.py  test_claude_adapter.py  test_clean_user_harness.py  test_cli.py  test_codex_adapter.py  test_config.py  test_convention_admin.py  test_convention_compiler.py  test_convention_profiles.py  test_convention_registry.py  test_conventions.py  test_dashboard.py  test_design_templates.py  test_doctor.py  test_evolutions.py  test_execution_policy.py  test_execution_state.py  test_failure_taxonomy.py  test_gemini_adapter.py  test_history.py  test_homebrew.py  test_json_parsing.py  test_logo.py  test_media_assets.py  test_orchestrator.py  test_orchestrator_ui.py  test_preferences.py  test_project_context.py  test_prompt_builder.py  test_prompts.py  test_protocol.py  test_provider_permissions.py  test_provider_preflight.py  test_quality.py  (+16 more)
(+94 files in other folders)
