[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matt-projectforge"
version = "0.6.0"
description = "A CLI wrapper that scaffolds new projects using AI coding tools with your conventions baked in."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["ai", "cli", "scaffolding", "developer-tools", "project-scaffolder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "questionary>=2.1.0",
    "PyYAML>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/Schramm2/projectforge"
Repository = "https://github.com/Schramm2/projectforge"
Issues = "https://github.com/Schramm2/projectforge/issues"
Releases = "https://github.com/Schramm2/projectforge/releases"

[project.scripts]
projectforge = "projectforge.__main__:main"
forge = "projectforge.__main__:main"

[project.entry-points."pipx.run"]
projectforge = "projectforge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/projectforge"]
force-include = { "conventions" = "projectforge/conventions", "skills/forge-scaffold" = "projectforge/skills/forge-scaffold" }

[tool.hatch.build.targets.sdist]
include = [
    "/src/projectforge",
    "/conventions",
    "/skills/forge-scaffold",
    "/docs",
    "/assets",
    "/README.md",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
